--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pip install dj-database-url==0.5.0
-pip install Django==3.1.2
-pip install gunicorn==20.0.4
-pip install psycopg2-binary==2.8.6
-pip install wheel==0.35.1
-pip install whitenoise==5.2.0
+dj-database-url==0.5.0
+Django==3.1.2
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
+wheel==0.35.1
+whitenoise==5.2.0
 
